--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,13 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "ctsem"]
+	path = ctsem
+	url = https://github.com/cdriveraus/ctsem
+	shallow = true
+	registered = true
+[submodule "ctsemOMX"]
+	path = ctsemOMX
+	url = https://github.com/cdriveraus/ctsemomx
+	shallow = true
+	registered = true
